=== Maintenance

* 1 major enhancement

	* Add extend to configuration (thanks to advice from Chad Fowler)

* 3 minor enhancements

  * mingw indicates windows too (thanks to Luis Lavena for the tip)
	* improved output for partial mock expecation failures
	* it_should_behave_like now accepts n names of shared groups

* 5 bug fixes

  * spec command with no arguments prints help
  * fixed typo in help. Fixes #73.
  * fixed bug where should_receive..and_yield after similar stub added the args_to_yield to the stub's original args_to_yield (Pat Maddox)
  * fixed bug where rspec-autotest (autospec) was loading non-spec files in spec directory. Fixes #559.
	* fixed bug where should_not_receive was reporting twice
  

=== Version 1.1.8 / 2008-10-03

* 2 bug fixes

  * restore colorized output in linux and windows w/ autotest (Tim Pope). Fixes #413.
  * autospec no longer hangs on windows. Fixes #554.

=== Version 1.1.7 / 2008-10-02

* no changes since 1.1.6, but releasing rspec-1.1.7 to align versions with rspec-rails-1.1.7

=== Version 1.1.6 / 2008-10-02

* 2 bug fixes

  * fixed bug where negative message expectations following stubs resulted in false (negative) positives (Mathias Meyer). Closes #548.
  * fixed bug where Not Yet Implemented examples report incorrect caller (Scott Taylor). Closes #547.

* 1 minor enhancement

  * removed deprecated mock argument constraint symbols

=== Version 1.1.5 / 2008-09-28

IMPORTANT: use the new 'autospec' command instead of 'autotest'. We changed
the way autotest discovers rspec so the autotest executable won't
automatically load rspec anymore. This allows rspec to live side by side other
spec frameworks without always co-opting autotest through autotest's discovery
mechanism.

ALSO IMPORTANT: $rspec_options is gone. If you were using this for anything
(like your own runners), use Spec::Runner.options instead.

ADDITIONALLY IMPORTANT: If you have any custom formatters, you'll need to