@@ -1,7 +1,6 @@
 require 'timeout'
 require 'spec/example/pending'
 require 'spec/example/module_reopening_fix'
-require 'spec/example/module_inclusion_warnings'
 require 'spec/example/example_group_methods'
 require 'spec/example/example_methods'
 require 'spec/example/example_group'
