@@ -163,14 +163,9 @@ module Spec
         @description_options = options
         @description_text = ExampleGroupMethods.description_text(*args)
         @spec_path = File.expand_path(options[:spec_path]) if options[:spec_path]
-        if described_type.class == Module
-          @described_module = described_type
-        end
         self
       end
       
-      attr_reader :described_module
-
       def examples #:nodoc:
         examples = example_objects.dup
         add_method_examples(examples)
